--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint src --ext .jsx,.js,.tsx,.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.14"
